# rademo

./: .gitignore  GEMINI.md  PRD.md  README.md  TASK.md  final_report.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: chatService.ts
frontend/src/components/: AuthGuard.tsx  theme-provider.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  UploadPage.tsx
frontend/src/utils/: sessionStorage.ts  types.ts
rag/: .env  README.md  final_report.md  pyproject.toml  training_data.pkl
rag/src/rag/: api.py  crew.py  main.py
rag/src/rag/config/: agents.yaml  tasks.yaml
rag/src/rag/tools/: rerank_tool.py
rag/src/rag/utils/: document_processor.py  logging_config.py  milvus_manager.py  retriever.py
rag/tests/: test_document_processor.py  test_milvus_manager.py  test_retriever.py
